# async-backend-skeleton

./: Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
src/api/: handlers.rs  mod.rs  responses.rs
src/domain/: mod.rs  models.rs  service.rs  validation.rs
src/storage/: memory.rs  mod.rs
tests/: integration.rs
